Improve ChannelLinkNotifier.removed and AbstractUID.getAsString performance
Fixes #1908

Signed-off-by: Wouter Born <github@maindrain.net>